test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-owned-from-oknil-borrowed.good
init-field-arg-oknil-owned-from-oknil-borrowed.chpl:9: In initializer:
init-field-arg-oknil-owned-from-oknil-borrowed.chpl:10: error: cannot create an owned variable from a borrowed class instance
